--- a/src/index.scss
+++ b/src/index.scss
@@ -1,45 +1,2 @@
-body {
-    background-color: gray;
-    display: flex;
-}
-
-canvas {
-    position: absolute;
-    left: 200px;
-}
-
-button {
-    background-color: pink;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-// background stage image
-#stage {
-    border: 1px solid black;
-    padding: 0;
-    margin: auto;
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
-}
-
-// drumset class (may not be necessary).
-.drumset {
-    border: 1px solid black;
-    padding: 0;
-    margin: auto;
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
-    opacity: 1;
-    z-index: 2;
-}
-
-.kit-selector {
-    position: absolute;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-}
+@import url('./styles/reset.scss');
+@import url('./styles/main.scss');
