--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -91,3 +91,113 @@ canvas {
 #controller {
     padding-top: 15px;
 }
+
+
+.instruction-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 75vw;
+    height: 75vh;
+    min-width: 250px;
+    top: 5%;
+    left: 12.5%;
+    position: absolute;
+    background-image:
+        linear-gradient(to top left,
+                #000000,
+                #41004e,
+                #550061,
+                #6a0075,
+                #801289,
+                #962d9e,
+                #ac43b3);
+    border: 1px solid #41004e;
+    border-radius: 30px;
+    z-index: 3;
+}
+
+#modal-title {
+    font-family: OCR A Std, monospace;
+    color: #999494;
+    letter-spacing: 0.05em;
+    text-shadow: 1.5px 1.5px 5px #85718e;
+    font-size: 26px;
+    text-align: center;
+    border-radius: 20px;
+    width: 50vh;
+    box-shadow: 0px 0px 10px #000000;
+    position: fixed;
+    top: 9%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+#modal-title {
+    display: flex;
+    justify-content: center;
+}
+
+#intro {
+    position: absolute;
+    width: 50vw;
+    top: 15%;
+    left: 12.5vw;
+    font-weight: bold;
+    font-size: 15px;
+    text-shadow: 1.5px 1.5px 5px #85718e;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.keyboard-controls {
+    position: absolute;
+    left: 10%;
+    top: 30%;
+    width: max-content;
+}
+
+#keyboard-legend {
+    position: absolute;
+    right: 10%;
+    top: 45%;
+    height: max-content;
+    width: max-content;
+}
+
+.nstrctn {
+    text-align: left;
+    padding: 5px;
+}
+
+#modal-button {
+    position: absolute;
+    bottom: 10%;
+}
+
+.overlay {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100vw;
+    height: 100vh;
+    background-image:
+        linear-gradient(
+            to bottom left,
+            #000000, 
+            #41004e, 
+            #550061,
+            #6a0075, 
+            #801289, 
+            #962d9e, 
+            #ac43b3
+        );
+    opacity: .8;
+}
+
+.button #directions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
