--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@ body {
             #962d9e, 
             #ac43b3
         );
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .left-side-main {
